# amazon-bedrock-agentcore-samples

./: .gitignore  CONTRIBUTORS.md  GET_STARTED.md  Makefile
.kiro/specs/browser-tool-strands-fixes/: requirements.md
.kiro/specs/browser-use-agentcore-integration/: design.md  requirements.md  tasks.md
.kiro/specs/browser-use-captcha-integration/: design.md  requirements.md  tasks.md
.kiro/specs/browser-use-captcha-tutorial/: design.md  requirements.md  tasks.md
.kiro/specs/browser-use-sensitive-info-tutorial/: design.md  requirements.md  tasks.md
.kiro/specs/llamaindex-captcha-framework-integration/: design.md  requirements.md  tasks.md
.kiro/specs/llamaindex-captcha-integration/: design.md  requirements.md  tasks.md
.kiro/specs/llamaindex-sensitive-info-tutorial/: design.md  requirements.md  tasks.md
.kiro/specs/novaact-sensitive-info-tutorial/: design.md  requirements.md  tasks.md
.kiro/specs/strands-captcha-framework-integration/: design.md  requirements.md  tasks.md
.kiro/specs/strands-captcha-handling/: design.md  requirements.md  tasks.md
.kiro/specs/strands-sensitive-info-tutorial/: design.md  requirements.md  tasks.md
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/: README.md
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/01-browser-with-NovaAct/: README.md
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/01-browser-with-NovaAct/handling-sensitive-information/: 04_audit_logging_compliance.ipynb  README.md  requirements.txt
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/02-browser-with-browserUse/: README.md
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/02-browser-with-browserUse/captcha-handling/: HYBRID_INTEGRATION_SUMMARY.md  README.md  production_example.py  requirements.txt
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/02-browser-with-browserUse/handling-sensitive-information/: .env.example  DEPLOYMENT_GUIDE.md  README.md  browseruse_agentcore_tutorial.py  browseruse_compliance_audit_tutorial.ipynb  browseruse_pii_masking_tutorial.ipynb  browseruse_production_deployment_tutorial.ipynb  setup.py  test_integration.py  validate_tutorial_completion.py
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/03-browser-with-Strands/: README.md  requirements.txt
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/03-browser-with-Strands/captcha-handling/: COMPREHENSIVE_GUIDE.md  README.md  strands-captcha.ipynb  strands_captcha_integration.py  strands_captcha_solver.py  strands_captcha_vision.py  strands_error_handling.py  strands_orchestration_layer.py
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/03-browser-with-Strands/handling-sensitive-information/: 01_strands_agentcore_secure_login.ipynb  02_strands_sensitive_form_automation.ipynb  README.md  SETUP_REPORT.md  (+17 more)
01-tutorials/05-AgentCore-tools/02-Agent-Core-browser-tool/04-browser-with-LlamaIndex/: README.md  requirements.txt
03-integrations/: README.md
03-integrations/bedrock-agentcore-browser-tool/: README.md
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/: README.md
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/: .env.template  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  __init__.py  captcha_tools.py  captcha_workflows.py  check_iam_permissions.py  client.py  config.example.yaml  config.py  config.template.yaml  config.yaml  configure_real_agentcore.py  docker-compose.yml  document_processor.py  error_handler.py  exceptions.py  health_diagnostics.py  hybrid_browser_client.py  incremental_processor.py  install.py  integration.py  interfaces.py  local_browser_backend.py  monitoring.py  privacy_manager.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  response_parser.py  security_manager.py  security_privacy_integration.py  setup.py  setup_agentcore_sdk.py  (+8 more)
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/config/: development.yaml  production.yaml  staging.yaml
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/docs/: API_REFERENCE.md  DISCLAIMER.md  FAQ.md  MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  QUICK_REFERENCE.md  README.md  REAL_WORLD_IMPLEMENTATIONS.md  TROUBLESHOOTING.md  TUTORIAL.md  USAGE_EXAMPLES.md
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/examples/: captcha_handling_app.py  common_use_cases_app.py
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/llamaindex_agentcore_integration/: __init__.py  _version.py
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/scripts/: build.py  deploy.py  release.py  setup_monitoring.py  validate_config.py
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/llamaindex/tests/: __init__.py  conftest.py  test_fixtures.py  test_integration_comprehensive.py  test_structure.py  test_unit_comprehensive.py
03-integrations/bedrock-agentcore-browser-tool/agentic-frameworks/strands-agents/: .env.template  .gitignore  INSTALL.md  README.md  bedrock_strands_browser_tool.py  example_usage.py  requirements.txt  setup.sh  test_integration.py
(+188 files in other folders)
